存储颜色 获取激活tab 改背景色

--- a/simple-ext/manifest.json
+++ b/simple-ext/manifest.json
@@ -4,22 +4,30 @@
     // 插件的描述
     "description": "从零深入Chrome插件开发  掘金",
     // 插件的版本
-    "version": "0.0.001",
+    "version": "0.0.002",
     // 配置插件程序的版本号，主流版本是2，最新是3
     "manifest_version": 2,
+    "permissions": ["storage", "declarativeContent", "activeTab"],
     // 新增popup弹框
     "browser_action": {
         "default_popup": "browser_action/popup.html",
         "default_icon": "browser_action/image/celestial-body.png"
     },
+    "background": {
+        // page 和 script 只配置一个
+        // "page": "background/index.html",
+        "scripts": ["background/index.js"],
+        /* 持久化?? */
+        "persistent": true 
+    },
     // 新增命令
     "commands": {
         "_execute_browser_action": {
+            /* "description": "commands/popup.html" // 这个没有效果??*/
             "suggested_key": {
                 "default": "Ctrl+Shift+E",
                 "mac": "MacCtrl+Shift+E"
-            },
-            /* "description": "commands/popup.html" // 这个没有效果??*/
+            }
         }
     }
 }
