--- a/simple-ext/manifest.json
+++ b/simple-ext/manifest.json
@@ -35,6 +35,15 @@
         /* Event Page 持久性后台 建议为false 用事件驱动 会影响计时器运行 */
         "persistent": false 
     },
+    "content_scripts":[{ // 对应 executeScript方法 运行空间是独立的 可以拿到dom
+       
+      "matches": ["https://*.baidu.com/*"],
+    //   "include_globs": ["*xieyufei.com/???s/*"],
+    //   "exclude_globs": ["*science*"],
+      "run_at": "document_idle",
+      "css": ["content_scripts/index.css"],
+      "js": ["content_scripts/index.js"]
+    }],
     // 新增命令
     "commands": {
         "_execute_browser_action": {
