--- a/vue-web-ext/package.json
+++ b/vue-web-ext/package.json
@@ -30,7 +30,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
-    "vue-cli-plugin-browser-extension": "latest",
+    "vue-cli-plugin-browser-extension": "Rhilip/vue-cli-plugin-browser-extension",
     "vue-template-compiler": "^2.6.14"
   }
 }
