--- a/vue-plugin-cli/package.json
+++ b/vue-plugin-cli/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "lodash": "^4.17.21",
-    "vue": "^3.2.13"
+    "pinia": "^2.0.14",
+    "vue": "^3.2.13",
+    "vue-router": "^4.0.15"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -21,6 +23,8 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "sass": "^1.52.1",
+    "sass-loader": "^13.0.0",
     "vue-cli-plugin-chrome-extension-cli": "~1.1.4"
   },
   "eslintConfig": {
