--- a/vue-plugin-cli/package.json
+++ b/vue-plugin-cli/package.json
@@ -9,6 +9,7 @@
     "build-watch": "vue-cli-service  --env.NODE_ENV=development build-watch --mode development"
   },
   "dependencies": {
+    "ant-design-vue": "^3.2.5",
     "core-js": "^3.8.3",
     "lodash": "^4.17.21",
     "pinia": "^2.0.14",
